<resources>
    <string name="app_name">LoginApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_panel">Panel logowania</string>
    <string name="loginTextView">login/email</string>
    <string name="passwordTextView">hasło</string>
    <string name="loginButton">ZALOGUJ</string>
    <string name="forgetPasswordTextView">Zapomniałeś/aś hasło?</string>
    <string name="incorrectPasswordTextView">Błędne hasło. Hasło powinno zawierać przynajmniej jedną dużą literę, małą literę, cyfrę oraz znak specjalny</string>
    <string name="missingAtLoginTextView">Login musi zawierać zank @</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">szukaj</string>
    <string name="title_activity_card_new">CardNewActivity</string>
    <string name="title_activity_card">CardActivity</string>
</resources>
