<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/login_panel"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/incorrectPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrectPasswordTextView"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/missingAtLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missingAtLoginTextView"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:weightSum="1.0">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"


            >

            <TextView
                android:id="@+id/loginNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loginTextView"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passwordTextView"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickButtonLogin"
                android:text="@string/loginButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickButtonLogin"
                android:text="@string/forgetPasswordTextView"
                android:textSize="12dp" />
        </TableRow>


    </TableLayout>
</LinearLayout>